--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       <div class="flex-box-container-1">
         <div id="flex-box-result"></div>
       </div>
+
+      
   </div>
 
   <div class="container-2">
@@ -32,6 +34,13 @@
 
      <div class="flex-box-container-2" id="flex-cat-gen">
   </div>
+
+  <div class="container-3">
+    <h2>Challenge 3: Rock, Paper, Scissors</h2>
+    
+
+    <div class="flex-box-container-2" id="flex-cat-gen">
+ </div>
 
   <script src="script.js"></script>
 </body>
