--- a/index.html
+++ b/index.html
@@ -33,13 +33,17 @@
      <button class="btn btn-success" id="cat-generator" onclick="generateCat()">Generate Cat</button>
 
      <div class="flex-box-container-2" id="flex-cat-gen">
+     </div>
   </div>
 
   <div class="container-3">
     <h2>Challenge 3: Rock, Paper, Scissors</h2>
-    
+    <div class="flex-box-rps" id="flex-box-rps-div">
+    <img id="rock" src="images/rock.jpg" height=150 width=150 alt="" onclick="rpsGame(this)">
+    <img id="paper" src="images/paper.png" height=150 width=150 alt="" onclick="rpsGame(this)">
+    <img id="scissors" src="images/scissor.png" height=150 width=150 alt="" onclick="rpsGame(this)">
+   </div>
 
-    <div class="flex-box-container-2" id="flex-cat-gen">
  </div>
 
   <script src="script.js"></script>
